[project]
name = "plumb"
requires-python = ">=3.11"

[tool.poetry]
name = "plumb"
version = "0.1.0"
description = "do stuff to stuff identified by stuff"
authors = ["Peter Wildani <pabw00@gmail.com>"]

[tool.poetry.scripts]
plumb = "plumb.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
